--- a/allblogs.html
+++ b/allblogs.html
@@ -39,11 +39,10 @@
             margin-top: 0;
            margin-bottom: 0;
         }
-        .topnav a:hover{
+        .main a:hover{
             background-color: rgb(21, 21, 20);
             color:rgb(215, 200, 200);
-            cursor: grab;
-            border-radius: 2px;
+            border-radius: 5px;
         }
         .topnav a img{
             margin: 0;
@@ -62,7 +61,7 @@
     <body>
         <div class="main">
           <div class="topnav">
-            <a href=""><img src="Deloitte-Logo.png" height="50" width="100"></a>
+            <a href="index.html"><img src="Deloitte-Logo.png" height="50" width="100"></a>
             <a href="allblogs.html" class="active">All Blogs</a>
             <a href="#home">Random Blog</a>
             <a href="#home">Write Blog</a>
