--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         }
         .topnav{
             overflow: hidden;
-            background-color:black;
+            background-color:rgb(12, 12, 12,0.5);
             display:flex;
             align-items: center;
             position: sticky;
@@ -74,7 +74,7 @@
    <body>
     <div class="main">
       <div class="topnav">
-        <a href="" class="active"><img src="Deloitte-Logo.png" height="50" width="100"></a>
+        <a href="index.html" ><img src="Deloitte-Logo.png" height="50" width="100"></a>
         <a href="allblogs.html">All Blogs</a>
         <a href="#home">Random Blog</a>
         <a href="#home">Write Blog</a>
