--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
      <a href="" class="active"><img src="Deloitte-Logo.png" height="50" width="100"></a>
      <a href="allblogs.html">All Blogs</a>
      <a href="#home">Random Blog</a>
-     <a href="#home">Write Blog</a>
+     <a href="write.html">Write Blog</a>
    </div>
    <div class="bg">
      <img src="deloitte-offices-bangalore-1.jpg" height="500px" width="100%">
