--- a/allblogs.html
+++ b/allblogs.html
@@ -79,9 +79,9 @@
                <div class="content">
 
                </div>
-               <div class="realcontent">
+               <!-- <div class="realcontent">
                 
-                </div>
+                </div> -->
           </div>
         </div>
      </body>
