--- a/blogs.html
+++ b/blogs.html
@@ -51,10 +51,10 @@
 <body>
     <div class="main">
       <div class="topnav">
-        <a href=""><img src="Deloitte-Logo.png" height="50" width="100"></a>
+        <a href="index.html"><img src="Deloitte-Logo.png" height="50" width="100"></a>
         <a href="allblogs.html">All Blogs</a>
-        <a href="#home">Random Blog</a>
-        <a href="#home">Write Blog</a>
+        <a href="randomblog.html">Random Blog</a>
+        <a href="write.html">Write Blog</a>
       </div>
       <div class="content">
 
