--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
    <div class="topnav">
      <a href="" class="active"><img src="Deloitte-Logo.png" height="50" width="100"></a>
      <a href="allblogs.html">All Blogs</a>
-     <a href="#home">Random Blog</a>
+     <a href="randomblog.html">Random Blog</a>
      <a href="write.html">Write Blog</a>
    </div>
    <div class="bg">
