--- a/allblogs.html
+++ b/allblogs.html
@@ -42,11 +42,11 @@
            margin-bottom: 0;
         }
         .topnav a:hover{
-            background-color: rgb(21, 21, 20);
-            color:rgb(215, 200, 200);
-            cursor: grab;
-            border-radius: 2px;
-        }
+         background-color: rgb(180, 129, 8);
+         color:white;
+         cursor: pointer;
+         border-radius: 5px;
+     }
         .topnav a img{
             margin: 0;
             padding:0px;
@@ -64,6 +64,23 @@
             position:absolute;
         
         }
+
+        .blog{
+            margin-left: 18%;
+            margin-right: 18%;
+            text-align: left;
+        }
+
+    .content{
+        color: rgb(73, 122, 227);
+        text-decoration: underline;
+        font-family: Georgia, 'Times New Roman', Times, serif;
+    }
+
+    .content:hover{
+        /* color: rgb(72, 72, 211); */
+        cursor: pointer;
+    }
     </style>
    </head>
     <body>
@@ -71,8 +88,8 @@
           <div class="topnav">
             <a href="index.html"><img src="Deloitte-Logo.png" height="50" width="100"></a>
             <a href="allblogs.html" class="active">All Blogs</a>
-            <a href="#home">Random Blog</a>
-            <a href="#home">Write Blog</a>
+            <a href="randomblog.html">Random Blog</a>
+            <a href="write.html">Write Blog</a>
           </div>
           <div class="blog">
                <h1 class="heading">Deloitte Blog List</h1><hr>
