--- a/blogs.html
+++ b/blogs.html
@@ -36,14 +36,22 @@
            margin-bottom: 0;
         }
         .topnav a:hover{
-            background-color: rgb(21, 21, 20);
-            color:rgb(215, 200, 200);
-            cursor: grab;
-            border-radius: 2px;
-        }
+         background-color: rgb(180, 129, 8);
+         color:white;
+         cursor: pointer;
+         border-radius: 5px;
+     }
         .topnav a img{
             margin: 0;
             padding:0px;
+        }
+
+        .content{
+            margin-left: 18%;
+            margin-right: 18%;
+            text-align: left;
+            color: white;
+            font-family: Georgia, 'Times New Roman', Times, serif;
         }
     </style>
    </head>
@@ -57,6 +65,27 @@
         <a href="write.html">Write Blog</a>
       </div>
       <div class="content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo vero quae architecto ratione beatae eligendi voluptates qui
+         modi quaerat ipsum, nostrum doloribus natus ducimus ullam quod iusto fugit nihil in, est enim velit. Eos doloremque mole
+         stiae eius vitae corrupti earum commodi deserunt velit tempore in?
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo vero quae architecto ratione beatae eligendi voluptates qui
+         modi quaerat ipsum, nostrum doloribus natus ducimus ullam quod iusto fugit nihil in, est enim velit. Eos doloremque mole
+         stiae eius vitae corrupti earum commodi deserunt velit tempore in?
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo vero quae architecto ratione beatae eligendi voluptates qui
+         modi quaerat ipsum, nostrum doloribus natus ducimus ullam quod iusto fugit nihil in, est enim velit. Eos doloremque mole
+         stiae eius vitae corrupti earum commodi deserunt velit tempore in?
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo vero quae architecto ratione beatae eligendi voluptates qui
+         modi quaerat ipsum, nostrum doloribus natus ducimus ullam quod iusto fugit nihil in, est enim velit. Eos doloremque mole
+         stiae eius vitae corrupti earum commodi deserunt velit tempore in?
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo vero quae architecto ratione beatae eligendi voluptates qui
+         modi quaerat ipsum, nostrum doloribus natus ducimus ullam quod iusto fugit nihil in, est enim velit. Eos doloremque mole
+         stiae eius vitae corrupti earum commodi deserunt velit tempore in?
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo vero quae architecto ratione beatae eligendi voluptates qui
+         modi quaerat ipsum, nostrum doloribus natus ducimus ullam quod iusto fugit nihil in, est enim velit. Eos doloremque mole
+         stiae eius vitae corrupti earum commodi deserunt velit tempore in?
+         Lorem ipsum dolor sit amet consectetur adipisicing elit. Quo vero quae architecto ratione beatae eligendi voluptates qui
+         modi quaerat ipsum, nostrum doloribus natus ducimus ullam quod iusto fugit nihil in, est enim velit. Eos doloremque mole
+         stiae eius vitae corrupti earum commodi deserunt velit tempore in?
 
       </div>
       <div class="realcontent">
