--- a/write.html
+++ b/write.html
@@ -9,7 +9,7 @@
           body{
          margin:0;
          font-family: Arial, Helvetica, sans-serif;
-         background-color: rgb(21, 21, 24);
+         background-color:  rgb(44, 44, 45);
      }
      .main{
          position:relative;
@@ -42,10 +42,10 @@
         margin-bottom: 0;
      }
      .topnav a:hover{
-         background-color: rgb(21, 21, 20);
-         color:rgb(215, 200, 200);
-         cursor: grab;
-         border-radius: 2px;
+         background-color: rgb(180, 129, 8);
+         color:white;
+         cursor: pointer;
+         border-radius: 5px;
      }
      .topnav a img{
          margin: 0;
@@ -78,7 +78,8 @@
             font-family: Arial, Helvetica, sans-serif;
         }
         h1{
-            font-size: 55px;
+            font-size: 45px;
+            font-family: Georgia, 'Times New Roman', Times, serif;
         }
         .hori{
             color:white;
@@ -95,14 +96,14 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="" class="active"><img src="Deloitte-Logo.png" height="50" width="100"></a>
+        <a href="index.html" class="active"><img src="Deloitte-Logo.png" height="50" width="100"></a>
         <a href="allblogs.html">All Blogs</a>
         <a href="randomblog.html">Random Blog</a>
         <a href="write.html">Write Blog</a>
       </div>
       <div class="cont">
-    <h1>Write your Blog! </h1>
-   <p> Express yourself!</p>
+    <h1>Write your Blog! </h1><p></p><p></p>
+   <p style="font-size: 25px;"> Express yourself!</p>
    <hr class="hori"><p></p>
     Enter your Title: <p></p>
     <input type="text" placeholder="Enter Title" class="text">
