--- a/randomblog.html
+++ b/randomblog.html
@@ -67,9 +67,10 @@
         <a href="write.html">Write Blog</a>
       </div>
       <div class="content">
-        <!-- <div class="realcontent">
-            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Molestiae magni, adipisci aliquam officia quos architecto repudiandae ea ratione perferendis alias.
-           </div> -->
+        </div>
+        <div class="realcontent">
+       </div>
+
       </div>
       
     </div>
